--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .header {
@@ -140,6 +141,7 @@
 .content__main_locate_wrap_btn-like {
     transform: scale(1);
     transition: transform 0.2s;
+    background-color: rgb(0, 0, 0, 0);
 }
 .content__main_locate_wrap_btn-like:active {
     transform: scale(1.3);
@@ -288,6 +290,12 @@
     .content__main {
         transform: scale(0.6);
     }
+    .content__main_locate_wrap_btn-like {
+        transform: scale(1.4);
+    }
+    .header {
+        transform: scale(0.8);
+    }
 }
 
 @media (max-height: 650px) {
@@ -377,9 +385,11 @@
 }
 
 .welcome-popup h3 {
+    font-family: "Raleway", sans-serif;
     margin-top: 0;
     color: #333;
     font-size: 24px;
+    margin-bottom: 13px;
 }
 
 .welcome-popup p {
@@ -488,4 +498,5 @@ a {
         margin-top: 9vh;
         font-size: 5vw;
     }
+    
 }
